# quetzalcoatl

./: .gitignore  Dockerfile  Taskfile.yml  main.py  pyproject.toml
.terraform/: environment
resources/mcp-collection/: .omnis.toml
