[project]
name = "quetzalcoatl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argostranslate>=1.10.0",
    "cdktf>=0.21.0",
    "chromadb>=0.6.2",
    "comfy-cli>=1.5.3",
    "diffusers[torch]>=0.35.2",
    "docker>=7.1.0",
    "evaluate>=0.4.6",
    "fastapi[standard]>=0.115.7",
    "gitpython>=3.1.45",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.0",
    "label-studio>=1.13.1",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.35",
    "langfuse>=2.44.0",
    "langgraph>=1.0.1",
    "litellm[proxy]>=0.1.236",
    "mcp>=1.9.4",
    "ollama>=0.6.1",
    "open-webui>=0.5.20",
    "openai>=1.109.1",
    "paramiko>=4.0.0",
    "pip>=25.3",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
